--- a/cryptoapp/templates/cryptoapp/base.html
+++ b/cryptoapp/templates/cryptoapp/base.html
@@ -8,6 +8,7 @@
           rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
           crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>{% block title %}CryptoApp{% endblock %}</title>
   </head>
   <body>
@@ -41,5 +42,7 @@
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous">
     </script>
+
+
   </body>
 </html>
