--- a/cryptoapp/templates/cryptoapp/base_logged_in.html
+++ b/cryptoapp/templates/cryptoapp/base_logged_in.html
@@ -20,6 +20,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/home">Home</a>
             </li>
+              <li class="nav-item">
+              <a class="nav-link" href="/highlight">Highlight</a>
+            </li>
           </ul>
         </div>
         <div>
