--- a/cryptoapp/templates/cryptoapp/coin_list.html
+++ b/cryptoapp/templates/cryptoapp/coin_list.html
@@ -1,17 +1,26 @@
-{% extends "cryptoapp/base.html" %}
+{% extends "cryptoapp/base_logged_in.html" %}
 
 {% block title %}Coin List - CryptoApp{% endblock %}
 
-{% block content %}
+{%  block style %}
     <style>
-        /* Custom CSS for styling the table */
+        body, .table-lg>tbody>tr>td{
+
+        }
+        .table-lg>thead>tr>th {
+            background-color: black;
+            color: white;
+        }
+        #header {
+            margin-top: 2%;
+        }
         .coin-table {
             width: 100%;
         }
         .coin-table th, .coin-table td {
             background-color: transparent;
             border: none;
-            padding: 15px; /* Increase cell padding for larger cells */
+            padding: 30px; /* Increase cell padding for larger cells */
         }
         .negative-change {
             color: red;
@@ -27,11 +36,13 @@
             margin-top: 20px;
         }
     </style>
+{% endblock %}
 
-    <h1 class="h3 mb-3">Coin List</h1>
+{% block content %}
+    <h1 class="h3 mb-3" id="header">Coins</h1>
     <div class="table-responsive">
-        <table class="table">
-            <thead class="thead-light">
+        <table class="table table-lg table-hover">
+            <thead class="thead-dark">
                 <tr>
                     <th class="w-25">Name</th>
                     <th class="w-15">Symbol</th>
