--- a/cryptoapp/templates/registration/login.html
+++ b/cryptoapp/templates/registration/login.html
@@ -20,7 +20,7 @@
                   <p>Don't have an account? Create one <a href="/sign-up">Here</a>!</p>
                   <button type="submit" class="btn btn-success">Login</button>
                     <small class="text-muted ml-2">
-                        <a href="{% url 'cryptoapp:password_reset' %}">Forgot Password?</a>
+                        <a href="{% url 'cryptoapp:reset_password' %}">Forgot Password?</a>
                     </small>
                 </form>
             </div>
