--- a/cryptoapp/templates/cryptoapp/base.html
+++ b/cryptoapp/templates/cryptoapp/base.html
@@ -22,20 +22,20 @@
             </li>
           </ul>
         </div>
-        <div>
-          <ul class="navbar-nav">
-            {% if user.is_authenticated %}
-            <span class="navbar-text">Logged in as {{user.username}} | </span>
-            <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
-            </li>
-            {% endif %}
-          </ul>
-        </div>
+{#        <div>#}
+{#          <ul class="navbar-nav">#}
+{#            {% if user.is_authenticated %}#}
+{#            <span class="navbar-text">Logged in as {{user.username}} | </span>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="/logout">Logout</a>#}
+{#            </li>#}
+{#            {% else %}#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="/login">Login</a>#}
+{#            </li>#}
+{#            {% endif %}#}
+{#          </ul>#}
+{#        </div>#}
       </div>
     </nav>
     <div class="container">{% block content %} {% endblock %}</div>
