--- a/cryptoapp/templates/cryptoapp/base_logged_in.html
+++ b/cryptoapp/templates/cryptoapp/base_logged_in.html
@@ -23,6 +23,9 @@
               <li class="nav-item">
               <a class="nav-link" href="/highlight">Highlight</a>
             </li>
+              <li class="nav-item">
+              <a class="nav-link" href="{% url 'cryptoapp:portfolio' %}">Portfolio</a>
+            </li>
           </ul>
         </div>
         <div>
