--- a/cryptoapp/templates/cryptoapp/coin_list.html
+++ b/cryptoapp/templates/cryptoapp/coin_list.html
@@ -46,6 +46,7 @@
                 <tr>
                     <th class="w-25">Name</th>
                     <th class="w-15">Symbol</th>
+                    <th class="w-15">Current Price</th>
                     <th class="w-15">24h %</th>
                     <th class="w-15">Market Cap</th>
                     <th class="w-15">Volume</th>
@@ -57,6 +58,7 @@
                     <tr class="py-4">
                         <td class="w-25"><span class="link-style" onclick="location.href='{% url 'cryptoapp:coin_details' coin.id %}'">{{ coin.name }}</span></td>
                         <td class="w-15"><span class="link-style" onclick="location.href='{% url 'cryptoapp:coin_details' coin.id %}'">{{ coin.symbol }}</span></td>
+                        <td class="w-15">${{ coin.current_price|floatformat:2 }}</td>
                         <td class="w-15 {% if coin.price_change_percentage_24h < 0 %}negative-change{% else %}positive-change{% endif %}">
                             <span class="{% if coin.price_change_percentage_24h < 0 %}negative-change{% else %}positive-change{% endif %}">
                                 {% if coin.price_change_percentage_24h < 0 %}&#9660;{% else %}&#9650;{% endif %}
