--- a/cryptoapp/templates/cryptoapp/coin_list.html
+++ b/cryptoapp/templates/cryptoapp/coin_list.html
@@ -35,6 +35,7 @@
         .pagination {
             margin-top: 20px;
         }
+
     </style>
 {% endblock %}
 
@@ -44,6 +45,7 @@
         <table class="table table-lg table-hover">
             <thead class="thead-dark">
                 <tr>
+                    <th class="w-5"> </th>
                     <th class="w-25">Name</th>
                     <th class="w-15">Symbol</th>
                     <th class="w-15">Current Price</th>
@@ -56,6 +58,11 @@
             <tbody>
                 {% for coin in coins %}
                     <tr class="py-4">
+                         <td class="w-5">
+                            <a href="{% url 'cryptoapp:toggle_watchlist' coin.id %}" class="watchlist-toggle">
+                                <span class="star {% if coin.in_watchlist %}yellow-star{% endif %}">&#9734;</span>
+                            </a>
+                        </td>
                         <td class="w-25"><span class="link-style" onclick="location.href='{% url 'cryptoapp:coin_details' coin.id %}'">{{ coin.name }}</span></td>
                         <td class="w-15"><span class="link-style" onclick="location.href='{% url 'cryptoapp:coin_details' coin.id %}'">{{ coin.symbol }}</span></td>
                         <td class="w-15">${{ coin.current_price|floatformat:2 }}</td>
@@ -109,7 +116,37 @@
         {% endif %}
     </ul>
 </nav>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const watchlistToggle = document.querySelectorAll('.watchlist-toggle');
 
+    watchlistToggle.forEach(function(element) {
+        element.addEventListener('click', function(event) {
+            // Get the URL from the href attribute
+            const url = element.getAttribute('href');
+
+            // Make an AJAX request to the toggle_watchlist view
+            fetch(url, {
+                method: 'POST',
+                credentials: 'same-origin',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': '{{ csrf_token }}' // Include the CSRF token
+                },
+            })
+            .then(response => response.json())
+            .then(data => {
+                // Toggle the star color based on the response
+                const star = element.querySelector('.star');
+                star.classList.toggle('yellow-star', data.in_watchlist);
+            });
+
+            // Prevent the default behavior of the anchor tag
+            event.preventDefault();
+        });
+    });
+});
+</script>
 <style>
     .pagination {
         margin-top: 20px;
@@ -130,7 +167,14 @@
         border-color: #007bff; /* Border color for active link */
         color: #fff; /* Text color for active link */
     }
+.watchlist-toggle {
+    text-decoration: none;
+}
+.yellow-star {
+    color: yellow;
+}
 </style>
+
 
 
 
