--- a/cryptoapp/templates/cryptoapp/base.html
+++ b/cryptoapp/templates/cryptoapp/base.html
@@ -13,7 +13,7 @@
     {% block style %}<style></style>{% endblock %}
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-#051139">
       <div class="container-fluid">
         <div>
           <ul class="navbar-nav">
