--- a/cryptoapp/templates/cryptoapp/base_logged_in.html
+++ b/cryptoapp/templates/cryptoapp/base_logged_in.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,10 +12,15 @@
           crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>{% block title %}CryptoApp{% endblock %}</title>
+    <style>
+      .navbar-text, .nav-link {
+        color: white;
+      }
+    </style>
     {% block style %}<style></style>{% endblock %}
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #051139;">
       <div class="container-fluid">
         <div>
           <ul class="navbar-nav">
@@ -35,9 +42,20 @@
           <ul class="navbar-nav">
             {% if user.is_authenticated %}
             <span class="navbar-text">Logged in as {{user.username}} | </span>
-            <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="{% get_media_prefix %}{{ user.userprofile.profile_pic }}" class="rounded-circle" alt="profile_pic" width="30">
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
+                <li><a class="dropdown-item" href="{% url 'cryptoapp:profile' %}">Profile</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{% url 'cryptoapp:logout' %}">Logout</a></li>
+              </ul>
             </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="/logout">Logout</a>
+            </li> -->
             {% else %}
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
