--- a/cryptoapp/templates/registration/signup.html
+++ b/cryptoapp/templates/registration/signup.html
@@ -5,10 +5,16 @@
 {% block style %}
     <style>
         body {
-            background-color: lightcyan;
+            background-color: #051139;
         }
         .row {
             margin: 2% 26%;
+        }
+        .shadow {
+            background-color: #111c44;
+        }
+        .form-text {
+            color: #a0a4b4;
         }
     </style>
 {% endblock %}
@@ -16,7 +22,7 @@
 {% block content %}
     <div class="row">
         <div class="col align-self-center">
-            <div class="shadow p-4 mb-5 bg-white rounded">
+            <div class="shadow p-4 mb-5 text-white rounded">
                 <form method="post">
                   {% csrf_token %}{{form|crispy}}
                   <p>Have an account? Login <a href="{% url 'login' %}">Here</a>!</p>
