Currency conversion commit

--- a/cryptoapp/templates/cryptoapp/base_logged_in.html
+++ b/cryptoapp/templates/cryptoapp/base_logged_in.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="/home">Home</a>
             </li>
               <li class="nav-item">
-              <a class="nav-link" href="/highlight">Highlight</a>
+              <a class="nav-link" href="{% url 'cryptoapp:highlight_view' %}">Highlight</a>
             </li>
               <li class="nav-item">
               <a class="nav-link" href="{% url 'cryptoapp:portfolio' %}">Portfolio</a>
