--- a/cryptoapp/templates/cryptoapp/base_logged_in.html
+++ b/cryptoapp/templates/cryptoapp/base_logged_in.html
@@ -13,7 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>{% block title %}CryptoApp{% endblock %}</title>
     <style>
-      .navbar-text, .nav-link {
+      .navbar-text, .navbar .nav-link {
         color: white;
       }
     </style>
