--- a/cryptoapp/templates/cryptoapp/portfolio.html
+++ b/cryptoapp/templates/cryptoapp/portfolio.html
@@ -28,27 +28,43 @@
                     {% endfor %}
                 </tbody>
             </table>
-
-            <!-- <p>Total Portfolio Balance: ${{ total_balance|floatformat:2 }}</p> -->
-            
-
-            <!-- Add Balance Form -->
-            <p>Current Balance: ${{ user_profile.balance|floatformat:2 }}</p>
-            <form method="post" class="mt-4">
-                {% csrf_token %}
-                {{ add_balance_form.as_p }}
-                <button type="submit" class="btn btn-primary">Add Balance</button>
-            </form>
-            
         {% else %}
             <p>You do not have any coins in your portfolio.</p>
-            <p>Current Balance: ${{ user_profile.balance|floatformat:2 }}</p>
-            <!-- Add Balance Form -->
-            <form method="post" class="mt-4">
-                {% csrf_token %}
-                {{ add_balance_form.as_p }}
-                <button type="submit" class="btn btn-primary">Add Balance</button>
-            </form>
+        {% endif %}
+        <p>Current Balance: ${{ user_profile.balance|floatformat:2 }}</p>
+        <!-- Add Balance Form -->
+        <form method="post" class="mt-4">
+            {% csrf_token %}
+            {{ add_balance_form.as_p }}
+            <button type="submit" class="btn btn-primary">Add Balance</button>
+        </form>
+        {% if transactions %}
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Coin</th>
+                        <th scope="col">Quantity</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">Type</th>
+                        <th scope="col">Timestamp</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for transaction in transactions %}
+                        <tr>
+                            <th scope="row">{{ forloop.counter }}</th>
+                            <td><span class="link-style" onclick="location.href='{% url 'cryptoapp:coin_details' transaction.coin.id %}'">{{ transaction.coin.name }}</span></td>
+                            <td>{{ transaction.quantity }}</td>
+                            <td>${{ transaction.amount|floatformat:2 }}</td>
+                            <td>{{ transaction.transaction_type }}</td>
+                            <td>{{ transaction.timestamp }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>No transactions to show.</p>
         {% endif %}
     </div>
 {% endblock %}
