Added .env commit

--- a/cryptoapp/templates/cryptoapp/base_logged_in.html
+++ b/cryptoapp/templates/cryptoapp/base_logged_in.html
@@ -13,9 +13,9 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>{% block title %}CryptoApp{% endblock %}</title>
     <style>
-      .navbar-text, .navbar .nav-link {
-        color: white;
-      }
+      {#.navbar-text, .navbar .nav-link {#}
+      {#  color: white;#}
+      {#}#}
     </style>
     {% block style %}<style></style>{% endblock %}
   </head>
