Profile page styling, verification and media processing

--- a/cryptoapp/templates/cryptoapp/coin_details.html
+++ b/cryptoapp/templates/cryptoapp/coin_details.html
@@ -21,9 +21,10 @@
         <div class="row mt-4"></div>
         <div class="row">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <strong class="stylish-font h3">{{ coin.name }}</strong>
                     <strong class="text-uppercase stylish-font h3">({{ coin.symbol }})</strong>
+                    <strong class="h3">&emsp;${{ coin.current_price }}</strong>
                 </div>
             </div>
             <div class="row justify-content-between mt-4">
