--- a/cryptoapp/templates/cryptoapp/base_logged_in.html
+++ b/cryptoapp/templates/cryptoapp/base_logged_in.html
@@ -44,11 +44,11 @@
             <span class="navbar-text">Logged in as {{user.username}} | </span>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="{% get_media_prefix %}{{ user.userprofile.profile_pic }}" class="rounded-circle" alt="profile_pic" width="30">
+                <img src="{% get_media_prefix %}{{ user.userprofile.profile_pic }}" class="rounded-circle" alt="profile_pic" width="30" height="30">
               </a>
               <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
                 <li><a class="dropdown-item" href="{% url 'cryptoapp:profile' %}">Profile</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="{% url 'cryptoapp:payments_history' %}">Payments</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="{% url 'cryptoapp:logout' %}">Logout</a></li>
               </ul>
