--- a/cryptoapp/templates/cryptoapp/edit_profile.html
+++ b/cryptoapp/templates/cryptoapp/edit_profile.html
@@ -3,9 +3,32 @@
 {% block title %}Profile - CryptoApp{% endblock %}
 
 {% block content %}
-    <h1>Profile</h1>
-    <br />
-
+    <div class="row mt-5">
+        <div class="col-md-3">
+            <div class="card card-body">
+                <h3 style="text-align: center">Profile</h3>
+                <hr>
+                <img class="rounded-circle" src="{{request.user.userprofile.profile_pic.url}}" width="270" height="270">
+            
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="card card-body">
+                
+                <form method="POST" action="" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{form.as_p}}
+            
+                <input class="btn btn-primary" type="submit" name="Update Information">
+                </form>
+                {% if verified %}
+                <div class="alert alert-primary mt-2" role="alert">You are verified</div>
+                {% else %}
+                <div class="alert alert-warning mt-2" role="alert">You are not verified</div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
     {% if messages %}
     <div class="alert alert-success" role="alert">
         {% for message in messages %}
@@ -13,12 +36,4 @@
         {% endfor %}
     </div>
     {% endif %}
-
-    <div class="form-group">
-        <form action="" method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-secondary" type="submit">Update Profile</button>
-        </form>
-    </div>
 {% endblock %}
