--- a/cryptoapp/templates/registration/password_reset.html
+++ b/cryptoapp/templates/registration/password_reset.html
@@ -1,17 +1,37 @@
 {% extends "cryptoapp/base.html" %}
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
+{% block style %}
+    <style>
+        body {
+            background-color: #051139;
+        }
+        .row {
+            margin: 10% 32%;
+        }
+        .shadow {
+            background-color: #111c44;
+        }
+        .form-text {
+            color: #a0a4b4;
+        }
+    </style>
+{% endblock %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Reset Password</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-success" type="submit">Request Password Reset</button>
+    <div class="row">
+        <div class="col">
+            <div class="shadow p-5 mb-5 text-white rounded">
+                <form method="post">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Reset Password</legend>
+                    {{ form|crispy }}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-success" type="submit">Request Password Reset</button>
+                </div>
+                </form>
             </div>
-        </form>
+        </div>
     </div>
 {% endblock content %}
